--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ jar {
     manifest {
         attributes 'Implementation-Title': 'Project creator',
                    'Implementation-Version': version,
-                   'Main-Class': 'org.voyager.janeway.ProjectCreator'
+                   'Main-Class': 'org.tfcode.project.ProjectCreator'
     }
     
     dependsOn configurations.compile
@@ -33,7 +33,8 @@ dependencies {
             'commons-io:commons-io:2.4',
             'ch.qos.logback:logback-classic:1.1.3',
             'io.vertx:vertx-core:3.2.0',
-            'io.vertx:vertx-web:3.2.0'
+            'io.vertx:vertx-web:3.2.0',
+            'io.github.lukehutch:fast-classpath-scanner:1.9.18'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
 
@@ -52,12 +53,10 @@ task copyDependencies(type: Copy) {
 }
 
 
-test 
-{
+test {
     systemProperties 'property': 'value'
-    testLogging 
-    {
-     events"passed","skipped","failed","standardOut","standardError"
+    testLogging {
+        events "passed", "skipped", "failed", "standardOut", "standardError"
     }
     dependsOn "cleanTest" 
 }
